Added support for external configuration file.\nAdded music playback via SDL.

--- a/src/dll/Makefile
+++ b/src/dll/Makefile
@@ -23,7 +23,7 @@ version.ro: version.rc
 	g++ -O3 -c -DBUILD_DLL $^
 
 ../../out/civ2patch.dll: *.o version.ro
-	g++ -shared -static-libgcc -static-libstdc++ -O3 -o $@ $^ -lwinmm -lsdl2 -lsdl2_mixer
+	g++ -shared -static-libgcc -static-libstdc++ -O3 -o $@ $^ -lwinmm
 
 clean:
 	rm -f version.ro *.o
